# mtg-agent

./: .env.example  .gitignore  pyproject.toml  requirements.txt
image_cache/: .gitkeep
mtg_agent/: __init__.py  deck_tools.py  main.py  scryfall_integration.py
